# gpg

./: README.md  tatus
gpg_control/: CMakeLists.txt  package.xml
gpg_control/config/: control.yaml  gazebo_ros_control_params.yaml
gpg_control/launch/: control.launch
gpg_control/rviz/: control.rviz
gpg_description/: CMakeLists.txt  package.xml
gpg_description/launch/: debug.launch  debug_manual.launch  load.launch  load_planner.launch
gpg_description/rviz/: urdf.rviz  urdf_manual.rviz
gpg_description/urdf/: go1.urdf.xacro  gpg.gazebo.xacro  gpg.urdf.xacro
gpg_description/urdf/d435/: d435.gazebo.xacro  d435.urdf.xacro  d435i.urdf.xacro  d435i_imu_modules.urdf.xacro
gpg_description/urdf/manual/: gpg.urdf  gpg.urdf.xacro  gpg_viz.urdf
gpg_elevation_mapping/: CMakeLists.txt  package.xml
gpg_elevation_mapping/config/: robot.yaml  rosconsole.conf  simple_robot.yaml
gpg_elevation_mapping/config/visualization/: filters.yaml
gpg_elevation_mapping/include/gpg_elevation_mapping/: GridMapFilters.hpp
gpg_elevation_mapping/launch/: elevation_mapping.launch  grid_map_filters.launch  visualization_filters.launch  visualization_fused_raw.launch
gpg_elevation_mapping/rviz/: perception.rviz  sim_map.rviz
gpg_elevation_mapping/src/: GridMapFilters.cpp  grid_map_filters_node.cpp
gpg_fake/: CMakeLists.txt  package.xml
gpg_fake/include/gpg_fake/: gpg_fake.h
gpg_fake/launch/: gpg_fake.launch
gpg_fake/rviz/: gpg_fake.rviz
gpg_fake/src/: gpg_fake.cpp
gpg_gazebo/: CMakeLists.txt  package.xml
gpg_gazebo/launch/: gazebo.launch  gazebo_urdf_manual.launch  perception.launch
gpg_gazebo/meshes/anel/: model.config
gpg_gazebo/meshes/anel/meshes/: anel.dae
gpg_gazebo/meshes/chao_aspero/: model.sdf
gpg_gazebo/meshes/chao_aspero/meshes/: chao_aspero.dae  chao_aspero.stl
gpg_gazebo/meshes/chao_aspero_2/: model.config
gpg_gazebo/meshes/cone/: model.sdf
gpg_gazebo/meshes/cone/meshes/: cone.stl
gpg_gazebo/meshes/escada/: model.sdf
gpg_gazebo/meshes/escada/meshes/: escada.dae  escada.stl
gpg_gazebo/meshes/escada_2/: model.sdf
gpg_gazebo/meshes/escada_2/meshes/: escada_2.dae
gpg_gazebo/meshes/esfera_personalizada/: model.sdf
gpg_gazebo/meshes/esfera_personalizada_2/: model.sdf
gpg_gazebo/meshes/ico_esfera/: model.sdf
gpg_gazebo/meshes/lombada/: model.config  model.sdf
gpg_gazebo/meshes/meia_esfera/: model.config  model.sdf
gpg_gazebo/meshes/meia_esfera/meshes/: meia_esfera.stl
gpg_gazebo/meshes/parede/: model.sdf
gpg_gazebo/meshes/parede/meshes/: parede.dae  parede.stl
gpg_gazebo/meshes/pilar/: model.config  model.sdf
gpg_gazebo/meshes/pilar/meshes/: pilar.dae  pilar.stl
gpg_gazebo/meshes/pilar_2/: model.config  model.sdf
gpg_gazebo/meshes/pilar_2/meshes/: pilar_2.stl
gpg_gazebo/meshes/pilar_3/: model.sdf
gpg_gazebo/meshes/piramide/: model.config
gpg_gazebo/meshes/piramide/meshes/: piramide.dae
gpg_gazebo/meshes/prisma_trapezoidal/: model.config  model.sdf
gpg_gazebo/meshes/prisma_trapezoidal/meshes/: prisma_trapezoidal.dae  prisma_trapezoidal.stl
gpg_gazebo/meshes/rampa/meshes/: rampa.dae  rampa.stl
gpg_gazebo/meshes/rampa_2/meshes/: rampa_2.dae  rampa_2.stl
gpg_gazebo/meshes/rampa_dupla/: model.config  model.sdf
gpg_gazebo/meshes/rampa_dupla/meshes/: rampa_dupla.dae
gpg_gazebo/meshes/rampa_dupla_2/: model.sdf
gpg_gazebo/meshes/rampa_dupla_2/meshes/: rampa_dupla_2.dae
gpg_gazebo/meshes/rocha/: model.config  model.sdf
gpg_gazebo/models/anel/: model.sdf
gpg_gazebo/models/anel/meshes/: anel.stl
gpg_gazebo/models/chao_aspero/: model.config
gpg_gazebo/models/chao_aspero_2/: model.sdf
gpg_gazebo/models/chao_aspero_2/meshes/: chao_aspero_2.dae  chao_aspero_2.stl
gpg_gazebo/models/cone/: model.config
gpg_gazebo/models/cone/meshes/: cone.dae
gpg_gazebo/models/degrau0.15/degrau0.15/: model.config  model.sdf
gpg_gazebo/models/escada/: model.config
gpg_gazebo/models/escada_2/: model.config
gpg_gazebo/models/escada_2/meshes/: escada_2.stl
gpg_gazebo/models/esfera_personalizada/: model.config
gpg_gazebo/models/esfera_personalizada/meshes/: esfera_personalizada.dae  esfera_personalizada.stl
gpg_gazebo/models/esfera_personalizada_2/: model.config
gpg_gazebo/models/esfera_personalizada_2/meshes/: esfera_personalizada_2.stl
gpg_gazebo/models/ico_esfera/: model.config
gpg_gazebo/models/ico_esfera/meshes/: ico_esfera.dae  ico_esfera.stl
gpg_gazebo/models/lombada/meshes/: lombada.dae  lombada.stl
gpg_gazebo/models/meia_esfera/meshes/: meia_esfera.dae
gpg_gazebo/models/parede/: model.config
gpg_gazebo/models/pilar_2/meshes/: pilar_2.dae
gpg_gazebo/models/pilar_3/: model.config
gpg_gazebo/models/pilar_3/meshes/: pilar_3.dae  pilar_3.stl
gpg_gazebo/models/piramide/: model.sdf
gpg_gazebo/models/piramide/meshes/: piramide.stl
gpg_gazebo/models/rampa/: model.config  model.sdf
gpg_gazebo/models/rampa_2/: model.config  model.sdf
gpg_gazebo/models/rampa_baixa/: model.config  model.sdf
gpg_gazebo/models/rampa_baixa/meshes/: rampa_baixa.dae  rampa_baixa.stl
gpg_gazebo/models/rampa_dupla_2/: model.config
gpg_gazebo/models/unit_box/: model.sdf
gpg_gazebo/rqt_multiplot/: odometry.xml
gpg_gazebo/worlds/: ambulance.world  cenario.world  cenario_2.world  cenario_padrao.world  cenario_teste.world  objects.world  obstaculos.world  rampa.world  rampas.world  singlePillar.world  step.world  terrain_load.world  teste.world  world1.world
gpg_localization/: CMakeLists.txt  package.xml
gpg_localization/config/: localization.yaml
gpg_localization/launch/: gpg_localization.launch
gpg_localization/src/: publish_robot_pose.cpp
gpg_planning/: CMakeLists.txt  package.xml
gpg_planning/config/: planner.yaml
gpg_planning/include/gpg_planning/: FootPositionVisualizer.h  Planning.hpp
gpg_planning/launch/: gpg_planning.launch  planner.launch
gpg_planning/rviz/: planner_config.rviz
gpg_planning/src/: gpg_goal_publisher.cpp  planning.cpp  planning_node.cpp
gpg_raspberry/: CMakeLists.txt  package.xml
gpg_raspberry/launch/: gpg_raspberry.launch
gpg_raspberry/src/: gpg_led_switch.cpp
(+6 files in other folders)
