<?xml version="1.0"?>
<package format="2">
  <name>gpg_elevation_mapping</name>
  <version>0.0.0</version>
  <description>The gpg_elevation_mapping package</description>

  <maintainer email="viviansuzano@usp.br">vivian</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>elevation_mapping</depend>
	<depend>grid_map_filters</depend>
	
	<exec_depend>grid_map_demos</exec_depend>

</package>
