<?xml version="1.0"?>
<package format="2">
  <name>gpg_localization</name>
  <version>0.0.0</version>
  <description>The gpg_localization package</description>

  <maintainer email="viviansuzano@usp.br">vivian</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
	<depend>nav_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>tf</depend>
	
	<exec_depend>robot_localization</exec_depend>

</package>
