<?xml version="1.0"?>
<package format="2">
  <name>gpg_planning</name>
  <version>0.1.0</version>
  <description>Send velocity goals for the gpg diff_drive_controller.</description>

  <maintainer email="viviansuzano@usp.br">vivian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
    

</package>
