<?xml version="1.0"?>
<package format="2">
  <name>gpg_raspberry</name>
  <version>0.1.0</version>
  <description>Functions for tests with a RaspberryPi.</description>

  <maintainer email="viviansuzano@usp.br">vivian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
